--- a/public/sass/global.scss
+++ b/public/sass/global.scss
@@ -58,8 +58,7 @@ header {
 
 .navbar {
 	min-height: 0;
-	height: 50px !important;
-	overflow: hidden;
+	height: 50px;
 
 	.avatar {
 		max-width: 40px;
@@ -76,7 +75,8 @@ header {
 	}
 	> li > a {
 		padding-top: 15px;
-		padding-bottom: 15px;
+		padding-bottom: 0;
+		height: 50px;
 	}
 	.open .dropdown-menu {
 		left: 0;
@@ -543,6 +543,13 @@ pre.code {
 			margin-right: 0;
 		}
 	}
+	#nav .navbar-nav, #user-nav .dropdown-menu {
+		background: #333;
+		position: fixed;
+		left: 15px;
+		top: 50px;
+		width: 100%;
+	}
 	table.table {
 		th.icon, td.icon {
 			width:30px;
@@ -587,3 +594,4 @@ pre.code {
 	}
 	img { max-width:100%; height:auto; }
 }
+
